Legger til kt-lint.